--- a/style.css
+++ b/style.css
@@ -47,4 +47,72 @@ table {
 
 /* reset complete */
 
+body{
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
+.container{
+	display: grid;
+	grid-template-columns: 1fr 4fr;
+}
+
+.sidebar{
+	background-color: rgb(65, 154, 221);
+	color: white;
+	padding: 10px;
+}
+.sizeIcon{
+	width:30px;
+	height:30px;
+}
+ 
+.sidebar>ul>li{
+	display: flex;
+	align-items:center;
+	gap: 10px;
+	font-size:20px;
+	margin-bottom: 4px;
+}
+
+.mainContent{
+	display: grid;
+	height: 100vh;
+	grid-template-rows: 1fr 3.5fr;
+}
+
+.content{
+	display: grid;
+	grid-template-columns: 2fr 0.7fr;
+}
+.dashBoardImage{
+	width: 60px;
+	height:60px;
+}
+
+.sidebar h1{
+	display:flex;
+	align-items:center;
+	gap: 18px;
+	font-size: 25px;
+	font-weight: 700;
+	margin: 10px;
+}
+
+.cards{
+	background: grey;
+	width: 200px;
+	padding:20px;
+	border-radius: 10px;
+	margin: 10px;
+}
+.sidebar ul{
+	margin-top: 50px;
+	margin-left: 20px;
+}
+
+.cards h4{
+	font-weight: 700px;
+}
+.cardContent{
+	font-size:12px;
+}
